2001-10-11  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Got rid
	of qsort of steps, and now keep the step list in sorted order.
	Further, we combine duplicate steps with the same x value,
	which bounds the size of the step list to x1 - x0, so we
	don't need to dynamically resize it. Thanks greatly to
	Bruce Q. Hammond for the original version of this patch.

2001-10-09  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_test_cross): Breaks
	bottom part of line segments in "too close" cases.

2001-10-09  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_writer_rewind_add_point): Fixed
	bbox computation.
	(art_svp_intersector): Handle degenerate case where input
	SVP has 0 segments.

	* art_svp_intersect.h: Moved definition of art_svp_intersector
	inside #ifdef __cplusplus, so it links properly against C++

2001-10-09  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_break): Handle
	case when break y equals sweep line correctly. Also adds
	first try at winding number sanitychecker, but that makes
	too many false positives.

2001-10-07  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp.c (EPSILON): Set to zero if new intersector is
	in use - we want svp's to be in strict sorted order.

	* art_svp_intersect.c (art_svp_intersect_test_cross): Explicitly
	check that top points are equal, and swap immediately if b is out
	of order.
	(art_svp_intersect_horiz): Break segments that intersect
	horizontal lines. Now passes "two squares with offset" test.

2001-10-05  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c: Major changes to accommodate
	horizontal lines. Intersections of horizontal lines
	aren't fully processed, but should work a lot better
	than before.

	* testart.c: Minor tweaks. testpat now frees memory
	so it can be run under memprof to detect leaks.

2001-10-03  Raph Levien  <raph@pixel.artofcode.com>
