@@ -1,3 +1,9 @@
+2001-10-14  Raph Levien  <raph@pixel.artofcode.com>
+
+	* art_svp_intersect.c (art_svp_intersect_add_point): Fixed
+	rather subtle logic bug that misplaced insertion point
+	when seg argument was NULL.
+
 2001-10-11  Raph Levien  <raph@pixel.artofcode.com>
 
 	* art_svp_render_aa.c (art_svp_render_aa_iter_step): Got rid
